# poon-ai-service

./: .pre-commit-config.yaml  API_PERFORMANCE_REPORT.md  COMPREHENSIVE_CLEANUP_SUMMARY.md  DOCKER_DEPLOYMENT.md  FINAL_PROGRESS_REPORT.md  LINTING_FIXES_SUMMARY.md  Makefile  OPTIMIZATION_ROADMAP.md  README.md  RESTRUCTURING_COMPLETE.md  TESTING_SUMMARY.md  ai_spending.db  docker-compose.tesseract.yml  docker-compose.yml  env.example  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  security-report.json  setup_ollama.sh  spending.db  start  start.sh  test_api_performance.py  test_integration.py  test_new_architecture.py  test_simple_architecture.py
.cursor/rules/: python.mdc
bruno/: README.md  bruno.json
bruno/AI/: Parse Text.bru
bruno/AI Analysis/: Spending Analysis.bru
bruno/Health/: AI Status.bru  Detailed Health.bru  Health Check.bru
bruno/NLP/: Parse Text.bru  Parse Thai Text.bru
bruno/OCR/: Process Image.bru
bruno/Processing/: Batch Processing.bru  Complete Receipt Processing.bru  Text Processing.bru
bruno/Spending/: Create Entry.bru  Get All Entries.bru
bruno/Utilities/: Category Suggestions.bru  Merchant Normalization.bru
bruno/environments/: Development.bru  Production.bru
config/: __init__.py  settings.py
docker/: Dockerfile.tesseract  Makefile  README.md  env.docker  prometheus.yml  start.sh  test-deployment.sh
docker/mongodb-init/: init-db.js
docs/: DEVELOPMENT_ROADMAP.md  README.md  api-endpoints.puml  deployment-architecture.puml  frontend-integration.puml  processing-flow.puml  service-architecture.puml  system-overview.puml
docs/api/: openapi.json
models/: spending_models.py
scripts/: migrate.py  setup_tesseract.sh
services/: ai_service.py  cache_service.py  database_service.py  llama_service.py  llama_service_enhanced.py  nlp_service.py  ocr_service.py
src/: main.py
src/ai_service/api/middleware/: __init__.py  error_handling.py  logging.py  metrics.py
src/ai_service/application/commands/: __init__.py  base.py  spending_commands.py
src/ai_service/application/queries/: __init__.py  base.py  spending_queries.py
src/ai_service/application/services/: ai_learning_service.py  enhanced_text_processor.py  intelligent_cache_service.py  intelligent_mapping_service.py  smart_insights_service.py  spending_predictor_service.py
src/ai_service/core/config/: __init__.py  logging_config.py  settings.py
src/ai_service/domain/entities/: __init__.py  ai_training_data.py  category_mapping.py  spending_entry.py
src/ai_service/domain/events/: __init__.py  base.py  spending_events.py
src/ai_service/domain/repositories/: __init__.py  ai_training_repository.py  category_mapping_repository.py  spending_repository.py
src/ai_service/domain/value_objects/: __init__.py  confidence.py  image_data.py  money.py  processing_method.py  spending_category.py  text_content.py
src/ai_service/infrastructure/cache/: redis_cache.py
src/ai_service/infrastructure/database/: __init__.py  ai_training_repository.py  category_mapping_repository.py  mapping_seeder.py  mongodb_repository.py  sqlite_repository.py
src/ai_service/infrastructure/events/: event_stream.py
tests/: conftest.py  manual_testing.py  test_api_manual.py  test_complete_system.py  test_integration.py  test_new_architecture.py  test_simple_architecture.py
tests/integration/: test_ai_learning_system.py  test_api_comprehensive.py  test_api_health.py  test_api_spending.py  test_database_comprehensive.py  test_database_operations.py  test_external_apis.py
tests/mocks/: __init__.py  mock_mongodb_repository.py
tests/unit/: test_ai_learning_service.py  test_ai_training_data.py  test_command_handlers.py  test_commands_and_queries.py  test_confidence_comprehensive.py  test_domain_events.py  test_domain_events_base.py  test_enhanced_text_processor.py  test_entities_comprehensive.py  test_error_handling_middleware.py  test_image_data_comprehensive.py  test_money_comprehensive.py  test_query_handlers.py  test_simple_coverage_boost.py  test_simple_money.py  test_simple_processing_method.py  test_simple_spending_entry.py  test_update_command_handler.py  test_value_objects_comprehensive.py
utils/: __init__.py  cache.py  image_utils.py  text_utils.py
(+22 files in other folders)
